# routes/post.route.js
@@ -6,7 +6,6 @@ const postController = require('../controllers/post.controller');
 const upload = require('../Middleware/image_upload.middleware');
 
 router.get('/images', authenMiddleware.isAuth, postController.getAllImageUser);
-<<<<<<< HEAD
 router.put(
   '/images/:id',
   authenMiddleware.isAuth,
@@ -17,6 +16,7 @@ router.delete(
   authenMiddleware.isAuth,
   postController.deleteImage
 );
+
 router.get(
   '/:id/comments',
   authenMiddleware.isAuth,
@@ -32,6 +32,7 @@ router.post(
   authenMiddleware.isAuth,
   postController.likeComment
 );
+
 router.get(
   '/upload',
   authenMiddleware.isAuth,
@@ -45,19 +46,6 @@ router.post(
   authenMiddleware.isAuth,
   postController.commentPost
 );
-=======
-router.put('/images/:id', authenMiddleware.isAuth, postController.updateCapImage);
-router.delete('/images/:id', authenMiddleware.isAuth, postController.deleteImage);
-
-router.get("/:id/comments", authenMiddleware.isAuth, postController.getAllCmtDesc);
-router.delete("/:id/comments/:comment_id", authenMiddleware.isAuth, postController.deleteComment);
-router.post("/:id/comments/:comment_id/like", authenMiddleware.isAuth, postController.likeComment);
-
-router.get('/upload', authenMiddleware.isAuth ,upload,postController.uploadImage);
-router.post('/', authenMiddleware.isAuth , postController.uploadPost);
-router.post('/:id/like', authenMiddleware.isAuth, postController.likePost );
-router.post('/:id/comment', authenMiddleware.isAuth , postController.commentPost);
->>>>>>> 47a4528e7baf160cc5685ba7579c4b9775e5f666
 router.put('/:id', authenMiddleware.isAuth, postController.updatePost);
 router.delete('/:id', authenMiddleware.isAuth, postController.deletePost);
 router.get('/users/:id/post', authenMiddleware.isAuth, postController.listPost);
